name:                   some-utils
version:                0.1.0.3
synopsis:               Some utility functions
-- description:            
homepage:               http://dev.quietjoon.net/projects/some-utils.html
bug-reports:            https://github.com/QuietJoon/some-utils/issues
license:                BSD3
license-file:           LICENSE
author:                 YongJoon Joe
maintainer:             developer@quietjoon.net
copyright:              2014-2017 YongJoon Joe
category:               Control
build-type:             Simple
extra-source-files:     ChangeLog.md README.md
cabal-version:          >=1.10

library
  exposed-modules:      Control.Monad.Util
                      , Utils.Operator
  -- other-modules:        
  -- other-extensions:     
  build-depends:        base >=4.9 && <4.10
  -- hs-source-dirs:       
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/QuietJoon/some-utils.git
