name:                   some-utils
version:                0.2.0.0
synopsis:               Some utility functions
homepage:               http://dev.quietjoon.net/projects/some-utils.html
bug-reports:            https://github.com/QuietJoon/some-utils/issues
license:                BSD3
license-file:           LICENSE
author:                 YongJoon Joe
maintainer:             developer+some-utils@quietjoon.net
copyright:              2014-2017 YongJoon Joe
category:               Control
build-type:             Simple
extra-source-files:     ChangeLog.md README.md
cabal-version:          >=1.10

library
  exposed-modules:      Control.Monad.Util
                      , Print
                      , Utils.Operator
                      , Utils
  build-depends:        base >=4.9
                      , text
  hs-source-dirs:       src
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/QuietJoon/some-utils.git
